samples/_failures_safe/1761126873_dc743a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_caeb0455.c: In function ‘main’:
./samples/SAFE/__tmp_caeb0455.c:140:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  140 |     LogEntry stack_entry
      |     ^~~~~~~~
./samples/SAFE/__tmp_caeb0455.c:140:5: error: expected declaration or statement at end of input
